# acm-ccs-2025-multi-agent-rep

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  download_data_gdown.sh  download_models.sh  pyproject.toml  run_docker.sh  run_install.sh  run_setup.sh
data/: CARLA  multi-agent-aerial-dense
experiments/: algorithms.py  analyze_tune_neg_bias.ipynb  plot_experiment_results.ipynb  plotting.py  run_all_experiments.sh  run_experiment_0.py  run_experiment_1.py  run_experiment_2.py  run_experiment_3.py  run_experiment_4.py
hooks/: pre-commit
setup/: download_datasets.sh
