[project]
name = "ccs_rep"
version = "0.1.0-alpha.1"
description = "ACM CCS reproducibility for ground vehicle trust experiments"
authors = [{ name = "Spencer Hallyburton", email = "spencer@shally.dev" }]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = "MIT License"
keywords = [
    "computer vision",
    "perception",
    "tracking",
    "autonomy",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "gdown>=5,<6",
    # "mmcv",
    "avstack-api",
    "avstack-core[percep]",
    "avstack-security",
    "avstack-trust",
]

[project.urls]
Repository = "https://github.com/cpsl-research/acm-ccs-2025-multi-agent-rep.git"

[dependency-groups]
test = [
    "snakeviz>=2.1.1,<3",
    "pytest>=7,<8",
    "pytest-cov>=4,<5",
    "bandit~=1.7",
    "black[jupyter]~=22.12.0",
    "mypy>=0,<1",
    "isort~=5.11",
    "flake8~=5.0",
    "autoflake>=1,<2",
]

[tool.uv]
package = false
default-groups = ["test"]

[tool.uv.sources]
# mmcv = { path = "packages/mmcv-2.0.1-cp310-cp310-linux_x86_64.whl" }
avstack-api = { path = "./submodules/avstack-api", editable = true }
avstack-core = { path = "./submodules/avstack-core", editable = true }
avstack-security = { path = "./submodules/avstack-security", editable = true }
avstack-trust = { path = "./submodules/avstack-trust", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
    "integration",
]
